/deposito/{id}/delete
